Added more firebase caramelitos

--- a/basketball.html
+++ b/basketball.html
@@ -14,18 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/basketball.css" media="screen,projection" />
   </head>
   <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyCwSoVs3MRzGuevvD7ETQAN6nZ3643OKPQ",
-      authDomain: "classics-franchise-web.firebaseapp.com",
-      databaseURL: "https://classics-franchise-web.firebaseio.com",
-      projectId: "classics-franchise-web",
-      storageBucket: "classics-franchise-web.appspot.com",
-      messagingSenderId: "880589943801"
-    };
-    firebase.initializeApp(config);
-  </script>
+  <script src="js/firebase.js"> </script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
 
   <body>
