--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/materialize.min.css" media="screen,projection" />
     <link rel="stylesheet" type="text/css" href="css/index.css" media="screen,projection" />
   </head>
-  <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
-  <script src="js/firebase.js"> </script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
 
   <body>
     <header>
@@ -222,7 +218,10 @@
       </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+    <script src="js/myFirebase.js"> </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 
   </body>
