Added dynamic generation of roster and completed the news section with  punctuations per player in each game

--- a/basketball.html
+++ b/basketball.html
@@ -9,11 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" type="text/css" href="css/materialize.min.css" media="screen,projection" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="css/basketball.css" media="screen,projection" />
   </head>
 
-  <body onload="loadCharts();loadPosts();getNextMatch()">
+  <body onload="loadRoster();loadCharts();loadPosts();getNextMatch()">
     <header>
       <div class="navbar-fixed">
         <nav class="nav-extended white">
@@ -71,307 +72,10 @@
         <div class="row">
           <!-- TODO: centrar el nombre en mobile (classics) y esto tambien -->
           <h5 class="uppercase">Players</h5>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <!-- TODO: meter aqui un feature discovery -->
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <!-- TODO: meter aqui una sombra -->
-                <span class="card-title circle">1</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Juancho</span>
-                <p class="grey-text">Point Guard</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <!-- TODO: query this from the server too ?? -->
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">34</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Vega</span>
-                <p class="grey-text">Point Guard</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">18</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Charly</span>
-                <p class="grey-text">Point Guard - Shooting Guard</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">19</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Guitián</span>
-                <p class="grey-text">Shooting Guard - Small Forward</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">3</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Marcos</span>
-                <p class="grey-text">Power Forward</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">21</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Pepe</span>
-                <p class="grey-text">Shooting Guard - Small Forward - Power Forward</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">7</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Demi</span>
-                <p class="grey-text">Small Forward - Power Forward</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">00</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Nico</span>
-                <p class="grey-text">Small Forward - Power Forward</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">16</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Marcos</span>
-                <p class="grey-text">Power Forward</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">17</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Herráez</span>
-                <p class="grey-text">De todo menos lo que deberia</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">10</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Arjona</span>
-                <p class="grey-text">Center</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">14</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Jesús</span>
-                <p class="grey-text">Small Forward</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-                <span class="card-title">X</span>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">Gabi</span>
-                <p class="grey-text">Power Forward - Center</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="row">
           <!-- TODO: centrar el nombre en mobile (classics) y esto tambien -->
           <h5 class="uppercase">Head Coach</h5>
-          <div class="col s10 m6 l4 offset-s1">
-            <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <!-- TODO: meter aqui un feature discovery -->
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
-                  <i class="material-icons">add</i>
-                </a>
-              </div>
-              <div class="card-content">
-                <span class="card-title uppercase">John Doe</span>
-                <p class="grey-text">Lorem ipsum</p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title
-                  <i class="material-icons right">close</i>
-                </span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <div id="stats" class="container">
@@ -457,7 +161,7 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
     <script src="js/myFirebase.js"> </script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
