Updated readme, created a production folder with minified versions of the components to test the performance

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css" media="screen,projection" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/index.min.css" media="screen,projection" /> -->
   </head>
 
   <body>
@@ -222,8 +223,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
     <script src="js/myFirebase.js"> </script>
+    <!-- <script src="js/myFirebase.min.js"> </script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <!-- <script type="text/javascript" src="js/index.min.js"></script> -->
 
   </body>
 
